Factor out testing crate
The testing code will no longer have to be built with instrumentation,
which should reduce build times.

--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -37,5 +37,7 @@ rlimit = "0.6.2"
 tempfile = "3.2.0"
 test-env-log = "0.2.7"
 
+testing = { path = "../testing", package = "test-fuzz-testing", version = "=1.0.0" }
+
 [features]
 default = ["test-fuzz/serde_bincode"]
