--- a/test-fuzz/Cargo.toml
+++ b/test-fuzz/Cargo.toml
@@ -24,7 +24,7 @@ lazy_static = "1.4.0"
 predicates = "2.0.3"
 regex = "1.5.4"
 
-testing = { path = "../testing", package = "test-fuzz-testing", version = "=1.0.1" }
+testing = { path = "../testing", package = "test-fuzz-testing" }
 
 [features]
 default = ["serde_bincode"]
