--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -35,7 +35,7 @@ predicates = "2.0.3"
 regex = "1.5.4"
 rlimit = "0.6.2"
 tempfile = "3.2.0"
-test-env-log = "0.2.7"
+test-log = "0.2.7"
 
 testing = { path = "../testing", package = "test-fuzz-testing" }
 
