--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,6 +116,18 @@ jobs:
           RUST_BACKTRACE: 1
           RUST_LOG: warn
 
+  test-uninstalled-cargo-afl:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Test
+        run: |
+          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null || true`"
+          echo "$OUTPUT"
+          echo "$OUTPUT" | grep '^Error: Could not determine `cargo-afl` version. Is it installed? Try `cargo install afl`.$'
+
   test-incompatible-cargo-afl:
     runs-on: ubuntu-latest
 
