--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ members = [
 [workspace.metadata.dylint]
 libraries = [
     { git = "https://github.com/trailofbits/dylint", pattern = "examples/nonreentrant_function_in_test" },
+    { git = "https://github.com/trailofbits/dylint", pattern = "examples/question_mark_in_expression" },
     { git = "https://github.com/trailofbits/dylint", pattern = "examples/try_io_result" }
 ]
