--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/bin/cargo_test_fuzz.rs"
 anyhow = "1.0.51"
 bitflags = "1.3.2"
 cargo_metadata = "0.14.1"
-clap = "3.0.0-beta.5"
+clap = { version = "3.0.0-rc.0", features = ["cargo", "derive"] }
 env_logger = "0.9.0"
 lazy_static = "1.4.0"
 log = "0.4.14"
