--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -10,7 +10,7 @@ path = "src/main.rs"
 
 [dependencies]
 serde = { version = "1.0.132", features = ["rc"] }
-test-fuzz = { path = "../test-fuzz", version = "=2.0.0", default-features = false }
+test-fuzz = { path = "../test-fuzz", version = "=2.0.0" }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
