--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
           if [[ ${{ github.event_name }} = schedule ]]; then
             IGNORED='--ignored'
           fi
-          cargo test --workspace --no-default-features --features=test-fuzz/serde_${{ matrix.serde_format }} $AUTO_CONCRETIZE -- --nocapture $IGNORED $SHUFFLE
+          cargo test --workspace --features=test-fuzz/serde_${{ matrix.serde_format }} $AUTO_CONCRETIZE -- --nocapture $IGNORED $SHUFFLE
         env:
           AFL_I_DONT_CARE_ABOUT_MISSING_CRASHES: 1
           RUST_BACKTRACE: 1
@@ -128,7 +128,7 @@ jobs:
 
       - name: Test
         run: |
-          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null || true`"
+          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --no-run 2>&1 1>/dev/null || true`"
           echo "$OUTPUT"
           echo "$OUTPUT" | grep '^Error: Could not determine `cargo-afl` version. Is it installed? Try `cargo install afl`.$'
 
@@ -146,7 +146,7 @@ jobs:
 
       - name: Test
         run: |
-          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null || true`"
+          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --no-run 2>&1 1>/dev/null || true`"
           echo "$OUTPUT"
           echo "$OUTPUT" | grep '^Error: `[^`]*` depends on `afl [^`]*`, which is incompatible with `cargo-afl [^`]*`.$'
 
@@ -168,7 +168,7 @@ jobs:
 
       - name: Test
         run: |
-          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null || true`"
+          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --no-run 2>&1 1>/dev/null || true`"
           echo "$OUTPUT"
           echo "$OUTPUT" | grep '^`[^`]*` depends on `afl [^`]*`, which is newer than `cargo-afl [^`]*`.'
           echo "$OUTPUT" | grep 'Consider upgrading with `cargo install afl --force --version [^`]*`.$'
@@ -192,7 +192,7 @@ jobs:
 
       - name: Test
         run: |
-          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null || true`"
+          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --no-run 2>&1 1>/dev/null || true`"
           echo "$OUTPUT"
           echo "$OUTPUT" | grep '^Error: `[^`]*` depends on `test-fuzz [^`]*`, which is incompatible with `cargo-test-fuzz [^`]*`.$'
 
@@ -216,7 +216,7 @@ jobs:
 
       - name: Test
         run: |
-          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null || true`"
+          OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --no-run 2>&1 1>/dev/null || true`"
           echo "$OUTPUT"
           echo "$OUTPUT" | grep '^`[^`]*` depends on `test-fuzz [^`]*`, which is newer than `cargo-test-fuzz [^`]*`.'
           echo "$OUTPUT" | grep 'Consider upgrading with `cargo install cargo-test-fuzz --force --version [^`]*`.$'
