Add `serde_cbor4ii` format

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
 
     strategy:
       matrix:
-        serde_format: [bincode, cbor]
+        serde_format: [bincode, cbor, cbor4ii]
         toolchain: [stable, nightly]
 
     steps:
