--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -30,3 +30,4 @@ __auto_concretize = []
 __persistent = []
 __serde_bincode = ["internal/__serde_bincode"]
 __serde_cbor = ["internal/__serde_cbor"]
+__serde_cbor4ii = ["internal/__serde_cbor4ii"]
