--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -22,11 +22,14 @@ bitflags = "1.3.2"
 cargo_metadata = "0.14.2"
 clap = { version = "3.1.6", features = ["cargo", "derive"] }
 env_logger = "0.9.0"
+heck = "0.4.0"
 lazy_static = "1.4.0"
 log = "0.4.16"
+paste = "1.0.7"
 remain = "0.2.2"
 semver = "1.0.6"
 serde = { version = "1.0.136", features = ["derive"] }
+strum_macros = "0.24.0"
 subprocess = "0.2.8"
 
 internal = { path = "../internal", package = "test-fuzz-internal", version = "=3.0.1" }
