--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -40,6 +40,7 @@ assert_cmd = "2.0.4"
 predicates = "2.1.1"
 regex = "1.5.5"
 rlimit = "0.8.3"
+rustc_version = "0.4.0"
 tempfile = "3.3.0"
 test-log = "0.2.10"
 
