--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ members = [
 
 [workspace.metadata.dylint]
 libraries = [
-    { git = "https://github.com/trailofbits/dylint", pattern = "examples/nonreentrant_function_in_test" },
-    { git = "https://github.com/trailofbits/dylint", pattern = "examples/question_mark_in_expression" },
-    { git = "https://github.com/trailofbits/dylint", pattern = "examples/try_io_result" }
+    { git = "https://github.com/trailofbits/dylint", pattern = "examples/general/*" },
+    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/inconsistent_qualification" },
+    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/question_mark_in_expression" },
+    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/try_io_result" }
 ]
