Run rustup in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,9 @@ jobs:
             target/dylint/
           key: ${{ runner.os }}-dylint-${{ hashFiles('dylint_versions') }}
 
+      - name: Rustup
+        run: rustup update
+
       - name: Install llvm
         run: sudo apt-get install llvm
 
