Store third party tests in a JSON file
So that third_party.rs and update_patches.sh do not have to be kept in
sync.

--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -37,11 +37,13 @@ test-fuzz = { path = "../test-fuzz", version = "=3.0.2" }
 
 [dev-dependencies]
 assert_cmd = "2.0.4"
+option_set = "0.1.4"
 predicates = "2.1.1"
 regex = "1.5.5"
 rlimit = "0.8.3"
 rustc_version = "0.4.0"
 semver = "1.0.10"
+serde_json = "1.0.85"
 tempfile = "3.3.0"
 test-log = "0.2.10"
 
