--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: sudo apt-get install llvm
 
       - name: Prettier
-        run: npm install -g prettier && prettier --check '**/*.md' '**/*.yml'
+        run: npm install -g prettier && prettier --check '**/*.json' '**/*.md' '**/*.yml'
 
       - name: Cargo sort
         run: |
