--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ libraries = [
     { git = "https://github.com/trailofbits/dylint", pattern = "examples/general/*" },
     { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/inconsistent_qualification" },
     { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/question_mark_in_expression" },
-    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/try_io_result" }
+    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/suboptimal_pattern" },
+    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/try_io_result" },
+    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/unnecessary_conversion_for_trait" },
 ]
