--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -21,3 +21,9 @@ serde_json = "1.0"
 __auto_concretize = ["test-fuzz/auto_concretize"]
 __bar_fuzz = []
 __inapplicable_conversion = []
+__qwerty_q = []
+__qwerty_w = []
+__qwerty_e = []
+__qwerty_r = []
+__qwerty_t = []
+__qwerty_y = []
