--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Dylint
         run: |
           cargo install cargo-dylint dylint-link || true
-          DYLINT_RUSTFLAGS='--deny warnings' cargo dylint --all -- --features=test-fuzz/auto_concretize --all-targets
+          ./scripts/dylint.sh
 
       - name: Udeps
         run: |
